add support for nested fields (name separated by dot)

--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
     <input type="radio" name="radiogroup" value="first" />
     <input type="radio" name="radiogroup" value="second" />
     <input type="button" name="button" value="A button" />
+    <input type="hidden" name="test.nested" value="nested" />
     <select name="select">
         <option value="first">First</option>
         <option value="second">Second</option>
