multiple inputs with the same name

--- a/test.html
+++ b/test.html
@@ -11,6 +11,9 @@
     <input type="radio" name="radiogroup" value="first" />
     <input type="radio" name="radiogroup" value="second" />
     <input type="button" name="button" value="A button" />
+    <input type="hidden" name="multiple" value="a" />
+    <input type="hidden" name="multiple" value="b" />
+    <input type="hidden" name="multiple" value="c" />
     <input type="hidden" name="test.nested" value="nested" />
     <select name="select">
         <option value="first">First</option>
